# jira-epic-manager

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
example/: mystory1.json
src/: __init__.py  config.py  epic_manager.py  exceptions.py  logging_config.py  schema.py  utils.py
